--- a/fgui/assets/Hexa_chess/package.xml
+++ b/fgui/assets/Hexa_chess/package.xml
@@ -11,6 +11,7 @@
     <image id="pdzn7" name="丘.png" path="/Resources/Grid/"/>
     <image id="pdzn8" name="山.png" path="/Resources/Grid/"/>
     <image id="pdzn9" name="洼.png" path="/Resources/Grid/"/>
+    <image id="iudva" name="testbutton.png" path="/Resources/"/>
   </resources>
   <publish name=""/>
 </packageDescription>
